php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #60915 PHP 5.4 build fails
Submitted: 2012-01-28 08:44 UTC Modified: 2013-01-25 04:09 UTC
From: fedora at famillecollet dot com Assigned: rasmus (profile)
Status: Closed Package: gnupg (PECL)
PHP Version: 5.4.0RC6 OS: GNU/Linux (Fedora 16)
Private report: No CVE-ID: None
 [2012-01-28 08:44 UTC] fedora at famillecollet dot com
Description:
------------
Build fails against PHP 5.4.0RC6

Attached patch fix the build (also tested against 5.3.9)

This patch also fixes some compilation warnings (there are some others)
- unused variable
- missing include (zend_exceptions)
- out of bound array (could cause segfault)



Patches

gnupg-php54.patch (last revision 2012-01-28 08:44 UTC by fedora at famillecollet dot com)

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2012-01-29 02:29 UTC] rasmus@php.net
Automatic comment from SVN on behalf of rasmus
Revision: http://svn.php.net/viewvc/?view=revision&revision=322910
Log: - PHP 5.4 support
- include vars.inc in package.xml
- Fix tests to be gnupg version independent
fixes bug 60913
fixes bug 60915
 [2012-01-29 02:38 UTC] rasmus@php.net
Automatic comment from SVN on behalf of rasmus
Revision: http://svn.php.net/viewvc/?view=revision&revision=322911
Log: More cleanup based on patch from fedora at famillecollet dot com in bug #60915
 [2012-01-29 02:39 UTC] rasmus@php.net
Fixed in subversion
 [2012-01-29 02:39 UTC] rasmus@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: rasmus
 [2013-01-21 15:38 UTC] zach dot bailey at pardot dot com
Any chance of getting an updated GNUPG release that contains these fixes and is 
compatible with PHP 5.4?
 [2013-01-21 16:23 UTC] rasmus@php.net
-Status: Closed +Status: Not a bug
 [2013-01-21 16:23 UTC] rasmus@php.net
-Status: Not a bug +Status: Closed
 [2013-01-21 16:23 UTC] rasmus@php.net
Oops, changed the status of the wrong bug. I'll see if I can poke the maintainer 
to make a new release.
 [2013-01-25 02:55 UTC] zach dot bailey at pardot dot com
I know these things take time, unfortunately this is blocking us from being able 
to upgrade easily (manually compiling an extension for a large number of servers = 
no fun)

Any chance of an ETA for how long it might take for a new release of gnupg with 
5.4 compatibility?

Thanks!
 [2013-01-25 04:09 UTC] rasmus@php.net
I'm not sure why manually compiling is hard for you. Presumably you are not 
recompiling on every server. Aren't you building on your dev box and then 
installing to all your servers via chef or something like that? 
I fixed the code, but the maintainer is not around. Until he returns or someone 
steps up and takes it over there won't be a release. So it could easily be 
months.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 12 15:00:01 2026 UTC