More cleanup based on patch from fedora at famillecollet dot com in bug #60915